# cugip

./: CMakeLists.txt  README.md  debug_viewer.hpp  debug_viewer.tcc  index.html
benchmarks/: CMakeLists.txt  bench-CUGIP.cpp  bench-CUGIP.cu  dataset.h  mfi.cpp  mfi.h  pstdint.h
benchmarks/graph_cut/: CMakeLists.txt  boykov_kolmogorov.cpp  graph.hpp  graph_cut.cpp  graph_cut.cu  graph_cut_trace_utils.hpp  grid_cut.cpp  region_graph.cpp  regions_graph_construction.cpp  segmentation.cpp  segmentation_regions.cpp
benchmarks/lazy_evaluation/: CMakeLists.txt  procedural_views.cu
benchmarks/watershed_transformation/: CMakeLists.txt  main.cpp  watershed_transformation.cu  watershed_transformation.hpp
cli-tools/: CLANG_TIDY.txt  CMakeLists.txt  ccl.cpp  ccl.cu  ce_diffusion.cpp  ce_diffusion.cu  cli_utils.hpp  corner_detection.cpp  create_random_seed_distance_field.cpp  create_random_seed_distance_field.cu  create_sample_dataset.cpp  denoising.cpp  denoising.cu  gauss.cpp  gauss.cu  gradient.cpp  gradient.cu  image_info.cpp  mask_difference.cpp  neighborhood_graph.cpp  normalize_labeling.cpp  normalize_labeling.cu  objectness_measure.cpp  objectness_measure.cu  print_masked_labels.cpp  region_markers_from_masks.cpp  watershed_options.hpp  watershed_transformation.cpp  watershed_transformation.cu
doc/: documentation.doxygen
examples/: CMakeLists.txt
examples/cellular/: AutomatonView.cpp  AutomatonView.hpp  AutomatonView.ui  AutomatonWrapper.hpp  CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  automata.cu  main.cpp
examples/feature_points/: CMakeLists.txt  feature_point_item.cpp  feature_point_item.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
html/: access__utils_8hpp.html  access__utils_8hpp.js  access__utils_8hpp_source.html  annotated.html  annotated.js  annotated_dup.js  arithmetics_8hpp.html  arithmetics_8hpp.js  arithmetics_8hpp_source.html  async__cellular__automata_8hpp.html  async__cellular__automata_8hpp.js  async__cellular__automata_8hpp_source.html  cellular__automata_8hpp.html  cellular__automata_8hpp_source.html  classcugip_1_1_access_dimension_image_view-members.html  classcugip_1_1_access_dimension_image_view.html  classcugip_1_1_access_dimension_image_view.js  classcugip_1_1_aggregating_timer_set-members.html  classcugip_1_1_aggregating_timer_set.html  classcugip_1_1_aggregating_timer_set.js  classcugip_1_1_async_cellular_automaton_with_global_state-members.html  classcugip_1_1_async_cellular_automaton_with_global_state.html  classcugip_1_1_async_cellular_automaton_with_global_state.js  classcugip_1_1_async_cellular_automaton_with_global_state_and_pointer-members.html  classcugip_1_1_async_cellular_automaton_with_global_state_and_pointer.html  classcugip_1_1_async_cellular_automaton_with_global_state_and_pointer.js  classcugip_1_1_binary_operator_device_image_view-members.html  classcugip_1_1_binary_operator_device_image_view.html  classcugip_1_1_binary_operator_device_image_view.js  classcugip_1_1_cellular_automaton-members.html  classcugip_1_1_cellular_automaton.html  classcugip_1_1_cellular_automaton.js  classcugip_1_1_cellular_automaton_base_c_r_t_p-members.html  classcugip_1_1_cellular_automaton_base_c_r_t_p.html  classcugip_1_1_cellular_automaton_base_c_r_t_p.js  classcugip_1_1_cellular_automaton_with_global_state-members.html  classcugip_1_1_cellular_automaton_with_global_state.html  classcugip_1_1_cellular_automaton_with_global_state.js  classcugip_1_1_checker_board_image_view-members.html  classcugip_1_1_checker_board_image_view.html  (+1434 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_61.js  all_62.js  all_63.js  all_64.js  all_65.js  all_66.js  all_67.js  all_68.js  all_69.js  all_6b.js  all_6c.js  all_6d.js  all_6e.js  all_7.js  all_72.js  all_73.js  all_74.js  all_75.js  all_76.js  all_77.js  all_79.js  all_7e.js  all_8.js  all_9.js  all_a.js  (+203 more)
include/cugip/: access_utils.hpp  any_image.hpp  array_view.hpp  color_spaces.hpp  copy.hpp  cuda_error_check.hpp  cuda_utils.hpp  cugip.hpp  device_flag.hpp  element.hpp  equivalence_management.hpp  exception.hpp  exception_error_info.hpp  fill.hpp  filter.hpp  for_each.hpp  functors.hpp  geometry_transformation.hpp  gil_utils.hpp  host_image.hpp  host_image_view.hpp  image.hpp  image_accessor.hpp  image_dumping.hpp  image_locator.hpp  image_traits.hpp  image_view.hpp  interpolated_view.hpp  itk_utils.hpp  kernel_execution_utils.hpp  math.hpp  memory.hpp  memory_view.hpp  meta_algorithm.hpp  multiresolution_pyramid.hpp  neighborhood.hpp  neighborhood_accessor.hpp  parallel_queue.hpp  procedural_views.hpp  reduce.hpp  (+20 more)
include/cugip/advanced_operations/: brisk_feature_detector.hpp  coherence_enhancing_diffusion.hpp  fast_corner_detector.hpp  graph_cut.hpp  graph_cut.tcc  graph_to_graphml.hpp  integral_image.hpp  nonlocal_means.hpp  objectness_measure.hpp
include/cugip/algebra/: arithmetics.hpp
include/cugip/basic_filters/: connected_component_labeling.hpp  convolution.hpp  gaussian.hpp  gradient.hpp  local_extremas.hpp  local_minima_detection.hpp  thresholding.hpp  watershed_transformation.hpp
include/cugip/cellular_automata/: async_cellular_automata.hpp  cellular_automata.hpp  global_state.hpp  neighborhood.hpp  rules.hpp  wrappers.hpp
include/cugip/detail/: boost_logging.hpp  default_logging.hpp  defines.hpp  error_codes.hpp  for_each_device_implementation.hpp  for_each_host.hpp  for_each_host_implementation.hpp  get_policy.hpp  include.hpp  logging.hpp  meta_algorithm_utils.hpp  preload_input.hpp  shared_memory.hpp  (+3 more)
test/: CMakeLists.txt  denoising.cpp  denoising.cu  generate_image.cpp  graph_cut.cpp  graph_cut.cu  main.cpp  processing.cu  test1.cpp  test2.cpp
unit_tests/: CMakeLists.txt  cellular_automata_test.cu  eigen.cu  eigen_test.cu  for_each_test.cu  geometry_transformation_test.cu  graph_cut_test.cu  procedural_view_test.cu  reduce_test.cu  scan_test.cu  shared_memory_test.cu  subview_test.cu  transform_test.cu  utils_test.cu  vector_test.cu
(+14 files in other folders)
