CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT( test1 )


set(Boost_USE_STATIC_LIBS   ON)
set(Boost_USE_MULTITHREADED ON)
FIND_PACKAGE(Boost REQUIRED COMPONENTS program_options filesystem system )
MESSAGE(  ${Boost_LIBRARIES} )
INCLUDE_DIRECTORIES( ${Boost_INCLUDE_DIRS} "../include")

SET(CUDA_NVCC_FLAGS -arch=compute_20;-code=sm_20;--use_fast_math )

FIND_PACKAGE(CUDA)


SET( ${PROJECT_NAME}_SOURCES "main.cpp" )
SET( ${PROJECT_NAME}_CUDA_SOURCES "processing.cu" )

CUDA_ADD_EXECUTABLE(${PROJECT_NAME} ${${PROJECT_NAME}_SOURCES} ${${PROJECT_NAME}_CUDA_SOURCES} )
TARGET_LINK_LIBRARIES(${PROJECT_NAME} jpeg)

