CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT( tests )


set(Boost_USE_STATIC_LIBS   ON)
set(Boost_USE_MULTITHREADED ON)
FIND_PACKAGE(Boost REQUIRED COMPONENTS program_options filesystem system timer chrono)
MESSAGE(  ${Boost_LIBRARIES} )
INCLUDE_DIRECTORIES( ${Boost_INCLUDE_DIRS} "../include")

SET(CUDA_NVCC_FLAGS -arch=compute_20;-code=sm_20;--use_fast_math)

FIND_PACKAGE(CUDA)


SET(TEST1_SOURCES "test1.cpp" )
SET(TEST2_SOURCES "test2.cpp" )
SET( ${PROJECT_NAME}_CUDA_SOURCES "processing.cu" )

CUDA_ADD_EXECUTABLE(test1 ${TEST1_SOURCES} ${${PROJECT_NAME}_CUDA_SOURCES} )
TARGET_LINK_LIBRARIES(test1 jpeg ${Boost_LIBRARIES})

CUDA_ADD_EXECUTABLE(test2 ${TEST2_SOURCES} ${${PROJECT_NAME}_CUDA_SOURCES} )
TARGET_LINK_LIBRARIES(test2 jpeg ${Boost_LIBRARIES})
